[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-denue"
version = "0.1.0"
description = "MCP server for INEGI DENUE API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0"
]

[project.scripts]
mcp-denue = "mcp_denue.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "respx>=0.21.1"
]

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_denue"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
